# django-auth-backend

./: .coveragerc  .gitignore  .prospector.yml  README.md  celerybeat-schedule.db  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  vercel.json
.github/workflows/: django.yml
django_auth/: asgi.py  celery.py  settings.py  storage_backends.py  urls.py
scripts/: drop_test_dbs.sh  static_validation.sh  test.sh
src/: .pylintrc  build_files.sh  manage.py  mypy.ini  vercel.json
src/django_auth/: asgi.py  celery.py  settings.py  storage_backends.py  test_settings.py  urls.py  wsgi.py
src/users/: admin.py  apps.py  models.py  signals.py  tasks.py  token.py  urls.py
src/users/migrations/: 0002_series_articles.py  01_added_user_and_profile_model.py
src/users/views/: confirm.py  current_user.py  login.py  logout.py  profile_update.py  regenerate.py  register.py  series.py
src/users/views/password/: change_password.py  confirm_change_request.py  request_change.py
tests/users/: test_models.py  test_tasks.py  test_utils.py
tests/users/views/: test_change_password.py  test_confirm.py  test_confirm_change_password_request.py  test_current_user.py  test_login.py  test_logout.py  test_profile_update.py  test_regenerate.py  test_register.py  test_request_password_change.py  test_series.py
users/: admin.py  models.py  signals.py  tasks.py  token.py  urls.py
users/migrations/: 01_added_user_and_profile_model.py  01_added_user_model.py
users/views/: confirm.py  current_user.py  login.py  logout.py  profile_update.py  regenerate.py  register.py
users/views/password/: change_password.py  confirm_change_request.py  request_change.py
